--- a/index.html
+++ b/index.html
@@ -37,27 +37,33 @@
                     <!-- .player*6>img[src="images/players/players-$.png"]+h3{Top players-$} -->
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h1 class="player-name">Top players-1</h1>
+                        <h1 class="player-name">John Smith
+                        </h1>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h1 class="player-name">Top players-2</h1>
+                        <h1 class="player-name">Pro Rasel
+                        </h1>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h1 class="player-name">Top players-3</h1>
+                        <h1 class="player-name">Abu Sufian
+                        </h1>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h1 class="player-name">Top players-4</h1>
+                        <h1 class="player-name">Shajedul Karim
+                        </h1>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h1 class="player-name">Top players-5</h1>
+                        <h1 class="player-name">Maruf Ahmed
+                        </h1>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h1 class="player-name">Top players-6</h1>
+                        <h1 class="player-name">Mujahid
+                        </h1>
                     </div>
                 </div>
             </div>
