--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <header>
         <nav>
             <div class="icon">
-                <img src="images/icons/logo.png" alt="">
-                <a href="#">Idea</a>
+                <i class="fas fa-lightbulb"></i>
+                <a href="https://www.google.com/">Idea</a>
             </div>
             <div class="profile">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Works</a>
+                <a href="https://www.linkedin.com/in/tonay29/">Home</a>
+                <a href="https://www.linkedin.com/in/tonay29/">About Me</a>
+                <a href="https://www.linkedin.com/in/tonay29/">Works</a>
                 <img src="images/icons/profile.png" alt="">
             </div>
         </nav>
