--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2022 <span id="copy-name">Tonay K. Sarker</span></p>
+    </footer>
 </body>
 
 </html>
